--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -104,7 +104,7 @@
 
                 <!-- DNN -->
                 <div class="col-md-4 table-responsive">
-                    <h4>ANN-> DNN Prediction</h4>
+                    <h4>DNN Prediction</h4>
                     <table class="table table-bordered table-striped table-hover" id="dnn_table">
                         <thead>
                             <tr>
