--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -75,7 +75,7 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6 ">
                     <button type="submit" class="btn btn-primary" id="predict_btn_lpn">Predict LPN</button>
-                    <button type="submit" class="btn btn-success" id="predict_btn_dnn">Predict DNN</button>
+                    <button type="submit" class="btn btn-success" id="predict_btn_dnn">Predict ANN</button>
                     <button type="submit" class="btn btn-warning" id="predict_btn_svm">Predict SVM</button>
                 </div>
             </div>
@@ -104,7 +104,7 @@
 
                 <!-- DNN -->
                 <div class="col-md-4 table-responsive">
-                    <h4>DNN Prediction</h4>
+                    <h4>ANN Prediction</h4>
                     <table class="table table-bordered table-striped table-hover" id="dnn_table">
                         <thead>
                             <tr>
