--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -54,7 +54,7 @@
                 <div class="col-md-12">
                     <h3 class="text-center mt-5">Welcome to CT663 - Machine Learning</h3>
                     <p class="text-center">This is a simple machine learning project using Python and Flask with LPN,
-                        DNN, SVM</p>
+                        ANN, SVM</p>
                 </div>
             </div>
             <!-- Form Input -->
